--- a/The N-S computational tools had the best.sty
+++ b/The N-S computational tools had the best.sty
@@ -35,14 +35,24 @@ Non linear solution methods (for systems of non-linear equations)
     finiite Element
     finite volume
 
+    (1) Schafer & Lynch https://ntrs.nasa.gov/api/citations/20140006172/downloads/20140006172.pdf
 
     (2) Ahmad
 
-    (3)peerlings
+    (3) peerlings
 
 NASA 1972 Contractor Report CR2144 Aircraft Handling Qualities Data
 NASA 1973 Contractor Report CR2177
 NASA 1979 Technical Paper TP1538
 NASA - A Generic Nonlinear Aerodynamic Model for AircraftRobert C Nelson 1998 - Flight Stability and Automatic Control
 
+Predictions of basic turbulent flows with Fluent (fluidcodes.com)
+turbulence_2021_OF8.pdf (wolfdynamics.com)
+ADA086558.pdf (dtic.mil)
+
+References for the Digtal Datcom Program (pdas.com)
+
+ADB072483.pdf
+
+19630012235.pdf (nasa.gov)
  
